# HybridX

./: CMakeLists.txt
include/: car.h  electricCar.h  gasolineCar.h  hybridCar.h
src/: electricCar.cpp  gasolineCar.cpp  hybridCar.cpp
tests/: test.cpp
tests/catch2/: catch.hpp
